tests/NormalTests/paczka1/small_fuzzy/86526152.err
Error in line 1: XHsnEI2s A331 64,2
Error in line 7: kbs8em S364 11,0
Error in line 11: A331 A331 40,4
